added --export-latex option